fix main run